# backend/app/OpenApi/OpenApi.php
@@ -16,6 +16,14 @@ use OpenApi\Attributes as OA;
     url: 'http://localhost:8000/api/v1',
     description: 'Localhost API Server'
 )]
+
+#[OA\SecurityScheme(
+    securityScheme: 'BearerToken',
+    type: 'http',
+    scheme: 'bearer',
+    bearerFormat: 'JWT'
+)]
+
 class OpenApi
 {
 }
